@@ -488,8 +488,6 @@ void NmapOps::ValidateOptions() {
     fatal("Sorry -- IPv6 support is currently only available for connect() scan (-sT), ping scan (-sP), and list scan (-sL).  OS detection and decoys are also not supported with IPv6.  Further support is under consideration.");
   }
 
-  if (af() != AF_INET) mass_dns = false;
-
   /* Prevent performance values from getting out of whack */
   if (min_parallelism > max_parallelism)
     max_parallelism = min_parallelism;
